@@ -23,6 +23,7 @@ S3method(encoding,character)
 S3method(encoding,corpus)
 S3method(encoding,corpusSource)
 S3method(features,dfm)
+S3method(head,dfm)
 S3method(kwic,character)
 S3method(kwic,corpus)
 S3method(kwic,tokenizedTexts)
@@ -76,6 +77,7 @@ S3method(summary,textmodel_wordscores_fitted)
 S3method(summary,textmodel_wordscores_predicted)
 S3method(syllables,character)
 S3method(syllables,tokenizedTexts)
+S3method(tail,dfm)
 S3method(texts,corpus)
 S3method(texts,corpusSource)
 S3method(toLower,"NULL")
